<resources>
    <string name="app_name">God-Life Admin</string>
    <string name="prompt_email">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_text">Don\'t Have an account yet? Sign up here!</string>
    <string name="sign_in_text">Already have an account? Login here!</string>
    <string name="title_activity_members">Church Members</string>
    <string name="title_activity_notes_pad">NotesPad</string>
    <string name="title_activity_note_edit">NoteEdit</string>
    <string name="delete_menu_noteedit">Delete</string>
    <string name="menu_delete">Delete Item</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Home Address</string>
    <string name="names">Name</string>
    <string name="dob">D.O.B(DD/MM)</string>
    <string name="occupation">Occupation</string>
    <string name="stoo">State of Origin</string>
    <string name="nationality">Nationality</string>
    <string name="loaction">Location</string>


    <string-array name="gender">
        <item> Gender</item>
        <item> Male </item>
        <item> Female</item>

    </string-array>
    <string-array name="church_units">
        <item>Follow-Up Team</item>
        <item>Media Team</item>
        <item>Protocol Team</item>
        <item>Technical Team</item>
        <item>Sanctuary Team</item>
        <item>Scribes Team</item>
        <item>Outreach Team</item>
        <item>House of Judah</item>
        <item>Beautification Team</item>
        <item>UsheringTeam </item>
        <item>Children Dept</item>
        <item>Treasury Team</item>
        <item>Prayer Team</item>
        <item>None</item>

    </string-array>
    <string-array name="marital">
        <item> Marital Status</item>
        <item> Single </item>
        <item> Married</item>
    </string-array>

    <string-array name="soo">
        <item>State of Origin</item>
        <item> Abia</item>
        <item> Adamawa</item>
        <item>Akwa Ibom </item>
        <item>Anambra </item>
        <item> Bauchi</item>
        <item> Bayelsa</item>
        <item> Benue</item>
        <item>  Borno</item>
        <item> Cross River</item>
        <item> Delta</item>
        <item>  Ebonyi</item>
        <item> Enugu</item>
        <item>Edo </item>
        <item>Ekiti </item>
        <item>Gombe </item>
        <item>Imo</item>
        <item>Jigawa </item>
        <item> Kaduna</item>
        <item>Kano </item>
        <item>Katsina </item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nasarawa</item>
        <item>Niger</item>
        <item>Ogun </item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers </item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe </item>
        <item>Zamfara </item>
        <item>FCT</item>
    </string-array>
    <string name="title_activity_first_timers">FirstTimers</string>
    <string name="delete_member">Delete Member</string>
    <string name="update_member">Update Member</string>
    <string name="detail_done">Done</string>
    <string name="member_search">Search</string>
    <string-array name="locations">

        <item>Location Tag</item>
        <item>Abattoir</item>
        <item>Angle-D</item>
        <item>Angwan Rogo</item>
        <item>Angwan Rukuba</item>
        <item>Apata</item>
        <item>Barkin Ladi</item>
        <item>Bauchi Road</item>
        <item>British</item>
        <item>Bukuru</item>
        <item>Bukuru Lowcost</item>
        <item>Busa Buje</item>
        <item>Dadin Kowa</item>
        <item>Dogon Karfe</item>
        <item>Farin Gada</item>
        <item>Federal Lowcost</item>
        <item>Phototech</item>
        <item>Gada Biyu</item>
        <item>Gold &amp; Base</item>
        <item>G.R.A</item>
        <item>Hwolshe</item>
        <item>JUTH</item>
        <item>Lamingo</item>
        <item>Lamingo Road</item>
        <item>Miango</item>
        <item>Millionaires QTRS</item>
        <item>Polo</item>
        <item>Rantya</item>
        <item>Rayfield</item>
        <item>Rukuba</item>
        <item>Rukuba Road</item>
        <item>State Lowcost</item>
        <item>Terminus</item>
        <item>Tudun Wada</item>
        <item>UTAN</item>
        <item>Village Hostel</item>
        <item>Yingi</item>
        <item>Zarmaganda</item>
    </string-array>

    <string-array name="options">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="visited">
        <item>Visited or Not</item>
        <item>Visited</item>
        <item>Not Visited</item>
    </string-array>

    <string name="password_recovery">Recover your password</string>
    <string name="hint_email">Email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="forgot_password_msg">Put your registered Email Id to receive password reset instructions.</string>
    <string name="reset_message">We have sent you instructions to reset your password!</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="search">Search here</string>
    <string name="title_activity_reports">Reports</string>
    <string name="bag">Born Again?</string>
    <string name="fwh">Filled with Holy Ghost?</string>
    <string name="now_member">Now a Member?</string>
    <string name="follower">Follow-Up Supervisor</string>
    <string name="select_date">Select Date</string>
    <string name="type_report">Report Content</string>
    <string name="report_title">Report Title</string>
    <string name="done">Done</string>
    <string name="delete_report">Delete Report</string>
    <string name="update_report">Update Report</string>
    <string name="dov">Date of Visit</string>
    <string name="visited">Visited?: </string>
    <string name="title_activity_join_church">JoinChurch</string>


    <string-array name="days">
        <item>DD</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>

    </string-array>

    <string-array name="months">
        <item>MM</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>

    </string-array>
    <string name="title_activity_timers_home">First Timers</string>
    <string name="title_activity_join_church_minna">Add Minna Members</string>
    <string name="title_activity_join_church_zaria">Add Zaria Members</string>
</resources>
