<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:background="@drawable/border_text"
    android:layout_margin="5dp"
    tools:context="com.godlife.followup.church_members.FullDetails">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_fulldetails_image"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/add_image"/>
        <RelativeLayout
            android:layout_below="@id/iv_fulldetails_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            >

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fulldetails_name"
                android:hint="@string/names"
                android:fontFamily="casual"
                />
            <TextView
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fulldetails_dob"
                android:hint="@string/dob"
                android:fontFamily="casual"
                android:ems="8"
                android:layout_toRightOf="@id/fulldetails_gender"
                android:layout_below="@+id/tv_fulldetails_name"
                />
            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/tv_fulldetails_name"
                android:background="@drawable/border_text"
                android:id="@+id/fulldetails_gender"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
               />
            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fulldetails_address"
                android:hint="@string/address"
                android:fontFamily="casual"
                android:layout_below="@id/tv_fulldetails_dob"
                />
            <TextView
                android:layout_marginTop="8dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fulldetails_email"
                android:hint="@string/email"
                android:fontFamily="casual"
                android:layout_below="@+id/tv_fulldetails_address"
                />
            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fulldetails_phone"
                android:hint="@string/phone"
                android:fontFamily="casual"
                android:layout_below="@+id/tv_fulldetails_email"
                />




            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fulldetails_occupation"
                android:hint="@string/occupation"
                android:fontFamily="casual"
                android:layout_below="@+id/tv_fulldetails_phone"
                />
            <TextView
                android:ems="4"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/border_text"
                android:id="@+id/tv_fulldetails_marital_status"
                android:layout_below="@id/tv_fulldetails_occupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"

                />
            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fulldetails_nationality"
                android:hint="@string/nationality"
                android:fontFamily="casual"
                android:ems="8"
                android:layout_below="@+id/tv_fulldetails_occupation"
                android:layout_toRightOf="@id/tv_fulldetails_marital_status"
                />
            <TextView
                android:layout_marginTop="8dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fulldetails_stateOfOrigin"
                android:hint="@string/stoo"
                android:fontFamily="casual"
                android:ems="7"
                android:layout_below="@+id/tv_fulldetails_marital_status"
                />
            <TextView
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_fulldetails_location"
                android:hint="@string/loaction"
                android:fontFamily="casual"
                android:ems="5"
                android:layout_below="@+id/tv_fulldetails_marital_status"
                android:layout_toRightOf="@id/tv_fulldetails_stateOfOrigin"

                />


        </RelativeLayout>
    </RelativeLayout>


</ScrollView>
