<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".church_members.UpdateMember">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/um_person_image"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/add_image"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/um_person_name"
                android:hint="@string/names"
                android:inputType="textCapWords"
                android:fontFamily="casual"
                android:ems="14"
                android:imeOptions="actionNext"

                />
            <EditText
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@id/um_person_name"
                android:background="@drawable/border_text"
                android:id="@+id/um_gender"
                android:hint="Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                />
            <EditText
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/um_person_address"
                android:hint="@string/address"
                android:inputType="textCapSentences"
                android:fontFamily="casual"
                android:ems="14"
                android:imeOptions="actionNext"
                android:layout_below="@id/um_gender"
                />
            <EditText
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/um_person_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:fontFamily="casual"
                android:imeOptions="actionNext"
                android:layout_below="@+id/um_person_address"
                />
            <EditText
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/um_person_phone"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="11"
                android:fontFamily="casual"
                android:imeOptions="actionNext"
                android:layout_below="@+id/um_person_email"
                />


            <EditText
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/um_person_dob"
                android:hint="@string/dob"
                android:inputType="text"
                android:fontFamily="casual"
                android:ems="8"
                android:imeOptions="actionNext"
                android:layout_toRightOf="@id/um_gender"
                android:layout_below="@+id/um_person_name"
                />

            <EditText
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/um_person_occupation"
                android:hint="@string/occupation"
                android:inputType="textCapSentences"
                android:fontFamily="casual"
                android:ems="14"
                android:imeOptions="actionNext"
                android:layout_below="@+id/um_person_phone"
                />
            <EditText
                android:hint="Marital Status"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/border_text"
                android:id="@+id/um_marital_status"
                android:layout_below="@id/um_person_occupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                />
            <EditText
                android:layout_marginBottom="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/um_person_nationality"
                android:hint="@string/nationality"
                android:inputType="textCapSentences"
                android:fontFamily="casual"
                android:ems="8"
                android:imeOptions="actionNext"
                android:layout_below="@+id/um_person_occupation"
                android:layout_toRightOf="@+id/um_marital_status"
                />
            <EditText
                android:layout_marginTop="8dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/um_person_stateOfOrigin"
                android:hint="@string/stoo"
                android:inputType="textCapSentences"
                android:fontFamily="casual"
                android:ems="7"
                android:imeOptions="actionNext"
                android:layout_below="@+id/um_marital_status"
                />
            <EditText
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_text"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/um_person_location"
                android:hint="@string/loaction"
                android:inputType="textCapSentences"
                android:fontFamily="casual"
                android:ems="5"
                android:imeOptions="actionDone"
                android:layout_below="@+id/um_marital_status"
                android:layout_toRightOf="@id/um_person_stateOfOrigin"
                />

            <Button
                android:id="@+id/um_update_button"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:backgroundTint="@color/blue"
                android:background="@drawable/border_text"
                android:layout_below="@+id/um_person_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Update Member"/>



        </RelativeLayout>
    </LinearLayout>


</ScrollView>
